--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script src="jquery.js"></script>
     <script src="starfox.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-40310827-4', 'megaman2.com');
+      ga('send', 'pageview');
+    </script>
+
   </head>
   <body>
     <center>
